// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Breadcrumbs Should match snapshot 1`] = `
<DocumentFragment>
  <ul
    class="root-0-2-1"
  >
    <li>
      <a
        href="/one"
      >
        one
      </a>
      <span
        class="gray-0-2-3"
      >
         / 
      </span>
    </li>
    <li>
      <a
        href="/two"
      >
        two
      </a>
      <span
        class="gray-0-2-3"
      >
         / 
      </span>
    </li>
    <li>
      <a
        href="/three"
      >
        three
      </a>
      <span
        class="gray-0-2-3"
      >
         / 
      </span>
    </li>
    <li>
      <a
        href="/four"
      >
        four
      </a>
      <span
        class="gray-0-2-3"
      >
         / 
      </span>
    </li>
    <li>
      <a
        href="/five"
      >
        five
      </a>
      <span
        class="gray-0-2-3"
      >
         / 
      </span>
    </li>
    <li>
      <span
        class="end-0-2-2"
      >
         end
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Render Breadcrumbs Should match snapshot 2`] = `
<DocumentFragment>
  <ul
    class="root-0-2-4"
  >
    <li>
      <a
        href="/one"
      >
        one
      </a>
      <span
        class="gray-0-2-6"
      >
         / 
      </span>
    </li>
    <li>
      <span
        class="end-0-2-5"
      >
         end
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Render Breadcrumbs Should match snapshot 3`] = `
<DocumentFragment>
  <ul
    class="root-0-2-7 test"
  >
    <li>
      <a
        href="/one"
      >
        one
      </a>
      <span
        class="gray-0-2-9"
      >
         / 
      </span>
    </li>
    <li>
      <span
        class="end-0-2-8"
      >
         end
      </span>
    </li>
  </ul>
</DocumentFragment>
`;
